test/spec_vectors/simd_align/ok/module_1.wat
(module (memory 1) (func (drop (v128.load align=2 (i32.const 0)))))