test/spec_vectors/simd_align/fail/module_44.wat
(module (memory 1) (func (drop (v128.load align=32 (i32.const 0)))))